--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nock": "^10.0.6"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "minimist": "^1.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
